Add expandable steps and ingredients using IIFE and recursion

--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
 
 <main>
 
-    <!-- PART 2: FILTER & SORT CONTROLS -->
+    <!-- Filters & Sorts (Part 2) -->
     <section class="controls">
-
         <div class="filter-group">
             <h3>Filter by Difficulty</h3>
             <div class="button-group">
@@ -37,13 +36,10 @@
                 <button class="sort-btn" data-sort="time">Time</button>
             </div>
         </div>
-
     </section>
 
-    <!-- PART 1: RECIPE CONTAINER -->
-    <div id="recipe-container">
-        <!-- Recipe cards will be rendered here by JavaScript -->
-    </div>
+    <!-- Recipes -->
+    <div id="recipe-container"></div>
 
 </main>
 
