--- a/index.html
+++ b/index.html
@@ -1,48 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RecipeJS - Your Functional Cooking Companion</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RecipeJS - Functional Cooking Companion</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-<header>
+  <header>
     <h1>🍳 RecipeJS</h1>
     <p>Your Functional Cooking Companion</p>
-</header>
+  </header>
 
-<main>
-
-    <!-- Filters & Sorts (Part 2) -->
+  <main>
     <section class="controls">
-        <div class="filter-group">
-            <h3>Filter by Difficulty</h3>
-            <div class="button-group">
-                <button class="filter-btn active" data-filter="all">Show All</button>
-                <button class="filter-btn" data-filter="easy">Easy</button>
-                <button class="filter-btn" data-filter="medium">Medium</button>
-                <button class="filter-btn" data-filter="hard">Hard</button>
-                <button class="filter-btn" data-filter="quick">Quick (&lt; 30 min)</button>
-            </div>
+      <div class="filter-group">
+        <h3>Filter by Difficulty</h3>
+        <div class="button-group">
+          <button class="filter-btn active" data-filter="all">All</button>
+          <button class="filter-btn" data-filter="easy">Easy</button>
+          <button class="filter-btn" data-filter="medium">Medium</button>
+          <button class="filter-btn" data-filter="hard">Hard</button>
+          <button class="filter-btn" data-filter="quick">Quick (&lt;30 min)</button>
         </div>
+      </div>
 
-        <div class="sort-group">
-            <h3>Sort by</h3>
-            <div class="button-group">
-                <button class="sort-btn active" data-sort="none">Default</button>
-                <button class="sort-btn" data-sort="name">Name (A–Z)</button>
-                <button class="sort-btn" data-sort="time">Time</button>
-            </div>
+      <div class="sort-group">
+        <h3>Sort</h3>
+        <div class="button-group">
+          <button class="sort-btn" data-sort="name">Name (A–Z)</button>
+          <button class="sort-btn" data-sort="time">Time</button>
+          <button class="sort-btn active" data-sort="none">Default</button>
         </div>
+      </div>
     </section>
 
-    <!-- Recipes -->
     <div id="recipe-container"></div>
+  </main>
 
-</main>
-
-<script src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
