--- a/index.html
+++ b/index.html
@@ -1,29 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RecipeJS - Your Functional Cooking Companion</title>
-
-    <!-- Link CSS file -->
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>RecipeJS</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-    <!-- Header section -->
-    <header>
-        <h1>🍳 RecipeJS</h1>
-        <p>Your Functional Cooking Companion</p>
-    </header>
+<header>
+  <h1>🍳 RecipeJS</h1>
+  <p>Your Functional Cooking Companion</p>
 
-    <!-- Main section -->
-    <main>
-        <div id="recipe-container">
-            <!-- Recipe cards will be rendered here by JavaScript -->
-        </div>
-    </main>
+  <!-- Search -->
+  <div class="search-container">
+    <input
+      type="text"
+      id="search-input"
+      placeholder="Search recipes or ingredients..."
+      autocomplete="off"
+    />
+    <button id="clear-search" class="clear-btn" style="display:none;">✕</button>
+  </div>
+</header>
 
-    <!-- Link JavaScript file -->
-    <script src="app.js"></script>
+<main>
+  <section class="controls">
+    <div class="button-group">
+      <button class="filter-btn active" data-filter="all">All</button>
+      <button class="filter-btn" data-filter="easy">Easy</button>
+      <button class="filter-btn" data-filter="medium">Medium</button>
+      <button class="filter-btn" data-filter="hard">Hard</button>
+      <button class="filter-btn" data-filter="quick">Quick</button>
+      <button class="filter-btn" data-filter="favorites">❤️ Favorites Only</button>
+    </div>
+
+    <div class="button-group">
+      <button class="sort-btn active" data-sort="none">Default</button>
+      <button class="sort-btn" data-sort="name">Name</button>
+      <button class="sort-btn" data-sort="time">Time</button>
+    </div>
+  </section>
+
+  <!-- Counter -->
+  <div class="recipe-info">
+    <p id="recipe-count">Showing 8 of 8 recipes</p>
+  </div>
+
+  <div id="recipe-container"></div>
+</main>
+
+<script src="app.js"></script>
 </body>
 </html>
